src/css/embed.less
@import "base";

.embed-row {
  display: flex;

  hr {
    margin: 0 22px;
    border: 1px solid var(--shaded);

    @media @tablet {
      margin: 22px 0;
    }

    .extra-data-column & {
      @media @desktop {
        margin: 22px 0;
      }
    }
  }

  @media @tablet {
    display: block;
  }

  &.extra-data-column {
    @media @desktop {
      display: block;
    }
  }
}

body.homepage {
  [data-theme-exclude="homepage"] {
    display: none !important;
  }
}

